@@ -39,6 +39,12 @@ snyk {
 
 tasks {
     test {
+        jvmArgs(
+                "-Djavax.net.ssl.trustStore=./src/test/resources/cacerts",
+                "-Djavax.net.ssl.trustStorePassword=changeit",
+                "--add-opens=java.base/sun.security.x509=ALL-UNNAMED",
+                "-Dcom.sun.net.ssl.checkRevocation=false",
+        )
         useJUnitPlatform()
         testLogging {
             events("passed", "skipped", "failed")
@@ -75,15 +81,17 @@ dependencies {
     implementation("com.google.guava:guava:30.1.1-jre")
     implementation("org.springdoc:springdoc-openapi-ui:1.5.10")
     implementation("com.plaid:plaid-java:9.0.0")
-    implementation("com.twilio.sdk:twilio:8.19.2")
+    implementation("com.twilio.sdk:twilio:8.20.0")
     implementation("com.sendgrid:sendgrid-java:4.7.5")
     implementation("com.idealista:format-preserving-encryption:1.0.0")
     implementation("io.fusionauth:fusionauth-java-client:1.30.2")
+    implementation("org.mock-server:mockserver-netty:5.11.2")
 
     // test section
     testImplementation("org.springframework.boot:spring-boot-starter-test")
     testImplementation("org.junit.jupiter:junit-jupiter-api")
     testImplementation("com.github.javafaker:javafaker:1.0.1")
+    testImplementation("org.mock-server:mockserver-spring-test-listener:5.11.2")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
 
     //test containers
